--- a/projFile/libMeToo/libMeToo.vcxproj
+++ b/projFile/libMeToo/libMeToo.vcxproj
@@ -69,9 +69,10 @@
     <ClCompile Include="..\..\src\Data\image.hpp" />
     <ClCompile Include="..\..\src\Math\Math.cpp" />
     <ClCompile Include="..\..\src\Math\Math.hpp" />
+    <ClCompile Include="..\..\src\Shape\plane.cpp" />
     <ClCompile Include="..\..\src\Shape\shape.cpp" />
     <ClCompile Include="..\..\src\Shape\sphere.cpp" />
-    <ClCompile Include="..\..\src\test.hpp" />
+    <ClCompile Include="..\..\src\Shape\triangle.cpp" />
     <ClCompile Include="..\..\src\Tracer\pathTracer.cpp" />
     <ClCompile Include="..\..\src\Writer\imageWriter.cpp" />
     <ClCompile Include="..\..\src\Writer\tiffWriter.cpp" />
@@ -96,8 +97,10 @@
     <ClInclude Include="..\..\src\common.h" />
     <ClInclude Include="..\..\src\Mat\Mat.h" />
     <ClInclude Include="..\..\src\Mat\Mat.cpp" />
+    <ClInclude Include="..\..\src\Shape\plane.hpp" />
     <ClInclude Include="..\..\src\Shape\shape.hpp" />
     <ClInclude Include="..\..\src\Shape\sphere.hpp" />
+    <ClInclude Include="..\..\src\Shape\triangle.hpp" />
     <ClInclude Include="..\..\src\Tracer\pathTracer.hpp" />
     <ClInclude Include="..\..\src\Writer\imageWriter.hpp" />
     <ClInclude Include="..\..\src\Writer\tiffWriter.h" />
